@@ -4,6 +4,7 @@ Version 0.4.0~dev
 	* Add support for url parameters in sl2d.conf, refs: #2245.
 	* Replace custom flatten by equivalent function from sjutils.
 	* Add support for setting environment variables for main command.
+	* Support network timeout variable, closes: #2791.
 
 Version 0.3.7 Released on 2009/12/10
 
